=== 2011-08-08 [emboss]
* Implemented enveloped signature transform.

=== 2011-08-06 [emboss]
* Completed preparation of signature.

=== 2011-08-06 [emboss]
* Renamed types
* Continued signature implementation.

=== 2011-07-23 [emboss]
* Started transforms infrastructure.

=== 2011-07-23 [emboss]
* Implemented Transform and Reference.
* Set default signing parameters.

=== 2011-07-17 [emboss]
* Test for algorithm constants encoding. It should be UTF-8.

=== 2011-07-17 [emboss]
* Continued document implementation and added algorithm constants.

=== 2011-07-17 [emboss]
* Implement document parsing and re-encoding.

=== 2011-07-17 [emboss]
* First steps.
