@@ -1,3 +1,6 @@
+=== 2011-08-13 [emboss]
+* Compute digest value of references.
+
 === 2011-08-08 [emboss]
 * Implemented enveloped signature transform.
 
